# Dynamic-MIS

./: CMakeLists.txt  compile_with_cmake.sh  convert_to_dynamic_mis_inst.py  gen_jobs.py  jobs.txt
